--- a/index.html
+++ b/index.html
@@ -258,11 +258,11 @@
     <div id="videos" class="tab-content">
         <h2>Video Resources</h2>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/zNVQfWC_evg" title="Feynman on Physics" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/watch?v=sLb9Z0mEc78&list=PLV3JHlBNPRcdSzL9Axpy7rtZh2G5uQEc3&index=7" title="magnetostriction" frameborder="0" allowfullscreen></iframe>
         </div>
         <p>A sample lecture on the character of physical law.</p>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/9bZkp7q19f0" title="IIT Hyderabad Overview" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/watch?v=sLb9Z0mEc78&list=PLV3JHlBNPRcdSzL9Axpy7rtZh2G5uQEc3&index=7" title="IIT Hyderabad Overview" frameborder="0" allowfullscreen></iframe>
         </div>
         <p>Overview of IIT Hyderabad facilities.</p>
     </div>
