--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         </nav>
         <main class="content">
             <div id="about" class="tab-content active">
-                <img src="profile-photo.jpg" alt="T. Chengappa" class="profile-photo">
+                <img src="images/CT.jpeg" alt="T. Chengappa" class="profile-photo">
                 <p>Senior Technical Superintendent</p>
                 <p>Department of Physics</p>
                 <p>IIT Hyderabad</p>
