--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- The page heading: Fill in your name -->
-<H1></H1>
-<p> <a href="https://samuract.github.io/">T.CHENGAPPA</p>
+<H1>T.CHENGAPPA</H1>
+<p> <a href="https://samuract.github.io/">Website</p>
 </CENTER>
 <HR>
 <STRONG>Senior Technical Superintendent </STRONG> <BR>
