--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!-- The page heading: Fill in your name -->
 <H1>T.CHENGAPPA</H1>
-<p><a href="https://samuract.github.io/">Website</p>
+<p><a href="https://samuract.github.io/">Website</p></a>
 </CENTER>
 <HR>
 <STRONG>Senior Technical Superintendent </STRONG> <BR>
-<STRONG> IIT Hyderabad </STRONG> </A> <BR>
+<STRONG> IIT Hyderabad </STRONG>  <BR>
 <STRONG>Kandi, Telangana 502285</STRONG> <BR>
 <STRONG>India</STRONG> <BR>
 <STRONG>Tel. No.: +91-40-2301-8647 </STRONG> <BR>
