--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!-- The page heading: Fill in your name -->
 <H1>T.CHENGAPPA</H1>
-<p><a href="https://samuract.github.io/">Website</p></a>
 </CENTER>
 <HR>
 <STRONG>Senior Technical Superintendent </STRONG> <BR>
@@ -25,6 +24,8 @@
 </UL>
 <H2>Useful Links</H2>
 <LI> <a href="https://functions.wolfram.com/">Mathematical Functions</a>
-&nbsp;<LI> <a href=" https://scienceworld.wolfram.com/physics//">Physics World</a>
+<LI> <a href=" https://scienceworld.wolfram.com/physics//">Physics World</a>
+  <LI> <a href=" https://samuract.github.io/">CT-Website</a>
+  
 &nbsp;</BODY>
 </HTML>
