--- a/index.html
+++ b/index.html
@@ -1,148 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>T. Chengappa - Senior Technical Superintendent, IIT Hyderabad</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f4f4f9;
-            color: #333;
-            line-height: 1.6;
-        }
-        .header {
-            background: linear-gradient(135deg, #1e3c72, #2a5298);
-            color: white;
-            padding: 20px;
-            text-align: center;
-            border-radius: 10px;
-            margin-bottom: 30px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-        .header h1 {
-            margin: 0;
-            font-size: 2.5em;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-        }
-        .header .personal-link {
-            margin: 0 0 10px 0;
-            font-size: 1.1em;
-        }
-        .header .personal-link a {
-            color: #ffd700;
-            text-decoration: none;
-        }
-        .header .personal-link a:hover {
-            text-decoration: underline;
-        }
-        .header hr {
-            border: none;
-            height: 1px;
-            background: rgba(255,255,255,0.3);
-            margin: 10px 0;
-        }
-        .header .contact {
-            font-size: 1em;
-            margin: 3px 0;
-        }
-        .header .contact a {
-            color: #ffd700;
-            text-decoration: none;
-        }
-        .header .contact a:hover {
-            text-decoration: underline;
-        }
-        .section {
-            background: white;
-            margin-bottom: 20px;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-        }
-        .awards {
-            border-left: 5px solid #28a745;
-        }
-        .employment {
-            border-left: 5px solid #007bff;
-        }
-        .education {
-            border-left: 5px solid #ffc107;
-        }
-        .links {
-            border-left: 5px solid #6f42c1;
-        }
-        .section h2 {
-            color: #495057;
-            border-bottom: 2px solid #dee2e6;
-            padding-bottom: 10px;
-            margin-top: 0;
-        }
-        ul {
-            list-style-type: none;
-            padding-left: 0;
-        }
-        li {
-            padding: 8px 0;
-            position: relative;
-            padding-left: 25px;
-        }
-        li:before {
-            content: "▶";
-            position: absolute;
-            left: 0;
-            color: #6c757d;
-            font-weight: bold;
-        }
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
-</head>
-<body>
-    <div class="header">
-        <h1>T. CHENGAPPA</h1>
-        <p class="personal-link"><a href="https://samuract.github.io/">Personal Website</a></p>
-        <hr>
-        <p class="contact"><strong>Senior Technical Superintendent</strong></p>
-        <p class="contact"><strong>IIT Hyderabad</strong></p>
-        <p class="contact"><strong>Kandi, Telangana 502285</strong></p>
-        <p class="contact"><strong>India</strong></p>
-        <p class="contact"><strong>Tel. No.: +91-40-2301-8647</strong></p>
-        <p class="contact"><strong>Email: </strong><a href="mailto:shntn05@gmail.com">chengappa.thumisi@phy.iith.ac.in</a></p>
-    </div>
-    <div class="section awards">
-        <h2>Awards and Recognitions</h2>
-        <ul>
-            <li>Awarded scholarship by Basic Research Education and Development Society (BREAD), Hyderabad</li>
-        </ul>
-    </div>
-    <div class="section employment">
-        <h2>Employment</h2>
-        <ul>
-            <li>Senior Technical Superintendent <a href="http://www.iith.ac.in/">IIT Hyderabad</a> (2025-present)</li>
-        </ul>
-    </div>
-    <div class="section education">
-        <h2>Education</h2>
-        <ul>
-            <li>M.Sc. (Physics), Sri Venkateswara University, Tirupati, Andhra Pradesh</li>
-            <li>B.Sc. (M.P.C), Sri Venkateswara University, Tirupati, Andhra Pradesh</li>
-        </ul>
-    </div>
-    <div class="section links">
-        <h2>Useful Links</h2>
-        <ul>
-            <li><a href="https://functions.wolfram.com/">Mathematical Functions</a></li>
-            <li><a href="https://scienceworld.wolfram.com/physics/">Physics World</a></li>
-            <li><a href="https://samuract.github.io/">CT-Website</a></li>
-        </ul>
-    </div>
-</body>
-</html>
+Chengappa Thumisi
