--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@
                 <p>Kandi, Telangana 502285</p>
                 <p>India</p>
                 <p>Tel. No.: +91-40-2301-8647</p>
+                <h2>Research Interests</h2>
+                <p>Quantum Materials for  Nano technology for advanced  applications</p>
                 <p><strong>Email: </strong><a href="mailto:chengappa.thumisi@phy.iith.ac.in">chengappa.thumisi@phy.iith.ac.in</a></p>
             </div>
             <div id="professional" class="tab-content">
