--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
         <main class="content">
             <div id="about" class="tab-content active">
                 <img src="images/CT.jpeg" alt="T. Chengappa" class="profile-photo">
+                <p><bold>Chengappa Thumisi</bold></p>
                 <p>Senior Technical Superintendent</p>
                 <p>Department of Physics</p>
                 <p>IIT Hyderabad</p>
