--- a/index.html
+++ b/index.html
@@ -241,6 +241,14 @@
                     <li>Ultra High Sensitive MOKE Magnetometer</li>
                     <li>Zeta 3D Profilometer</li>
                 </ul>
+                <h2>Teaching Laboratories</h2>
+                <li>M.Sc. Teaching Labs for I,II and III Sem Laboratories</li>
+                    <li>Engineering Physics Teaching Laboratory- V Sem </li>
+                <ul>
+                    <li>Multimodal Scanning probe Microscope</li>
+                    <li>Ultra High Sensitive MOKE Magnetometer</li>
+                    <li>Zeta 3D Profilometer</li>
+                </ul>
                 <h2>Employment</h2>
                 <ul>
                     <li>Senior Technical Superintendent <a href="http://www.iith.ac.in/">IIT Hyderabad</a> (2025-present)</li>
