--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
                 <h2>Employment</h2>
                 <ul>
                     <li>Senior Technical Superintendent <a href="http://www.iith.ac.in/">IIT Hyderabad</a> (2025-present)</li>
+                    <li>Senior Technical Superintendent IIT Hyderabad- (2020-2015)</li>
                 </ul>
                 <h2>Education</h2>
                 <ul>
