--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             <div id="photos" class="tab-content">
                 <h2>Photo Gallery</h2>
                 <div class="gallery">
-                    <img src="https://via.placeholder.com/300x200?text=IIT+Hyderabad+Campus" alt="IIT Hyderabad Campus">
+                    <img src="images/CT.jpeg" alt="T. Chengappa" class="profile-photo">
                     <img src="https://via.placeholder.com/300x200?text=Research+Lab" alt="Research Lab">
                     <img src="https://via.placeholder.com/300x200?text=Physics+Department" alt="Physics Department">
                     <img src="https://via.placeholder.com/300x200?text=Team+Event" alt="Team Event">
