--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                     <img src="https://via.placeholder.com/300x200?text=Physics+Department" alt="Physics Department">
                     <img src="https://via.placeholder.com/300x200?text=Team+Event" alt="Team Event">
                 </div>
-                <p>Examples of campus life and lab facilities at IIT Hyderabad.</p>
+                <p> at IISc, Bangalore.</p>
             </div>
             <div id="videos" class="tab-content">
                 <h2>Video Resources</h2>
