--- a/index.html
+++ b/index.html
@@ -280,6 +280,23 @@
             </div>
             <div id="books" class="tab-content">
                 <h2>Recommended Physics Books</h2>
+                <h2>Personal Management</h2>   
+      <li><a href="https://drive.google.com/file/d/1OHaB_KrjB9xrvVAKF8YAi97_AAjaR5H0/view?usp=sharing">The Fountain Head</a></li>
+ 
+  <li><a href=" https://drive.google.com/file/d/1WQS1ZqocVAQrFT8YTUE2Zkt7FLV_sKJU/view?usp=sharing">The Power of Habit</a></li>
+  
+  <li><a href=" https://drive.google.com/file/d/12qDLzUKqAdh4PFb9bJv4IOFFfFqvRgix/view?usp=sharing">The Seven Habits of Highly effective People</a></li>
+   <li><a href="  https://drive.google.com/file/d/1zurmNekeAEUtWTTYoqeDonDc_J_z6g9w/view?usp=sharing">The Secrets of Millionaire Mind</a></li>
+     <li><a href=" https://drive.google.com/file/d/1ad01oaz0Rg2Gya5RBiweFt72Iny-H9EA/view?usp=sharing">The Joys of Compounding</a></li>
+  
+    
+  </div>
+  <div class="column" style="background-color:#FFE4C4;">
+    <h2> Health Management</h2>
+   <li><a href="   https://drive.google.com/file/d/1g0pYWvkL7NYxDq_pMtK-dCEeWlCbL8H9/view?usp=sharing">  The Complete Guide to Fasting_ Heal Your Body Through Intermittent, Alternate-Day, and Extended Fasting </a></li> 
+  <li><a href="   https://drive.google.com/file/d/1f8XkdGyPVdM6IzyN2ERH4MviQLXEw90I/view?usp=sharing"> The Diabetes Code_ Prevent and Reverse Type 2 Diabetes Naturally  </a></li> 
+  <li><a href="   https://drive.google.com/file/d/1UQo-Ohua7MQu1Xu074-gtNY68cNoHsa3/view?usp=sharing"> The Longevity Solution_ Rediscovering Centuries-Old Secrets to a Healthy, Long Life .pdf </a></li> 
+  <li><a href="   https://drive.google.com/file/d/127OGciWu3Wnt5Djju7Rlwfrrv4zb_2cz/view?usp=sharing"> The Obesity Code_ Unlocking the Secrets of Weight Loss .pdf </a></li> 
                 <ul>
                     <li><a href="https://ctwellthify.github.io/">CT e-Books </a></li>
                     <li>The Feynman Lectures on Physics by Richard P. Feynman, Robert B. Leighton, Matthew Sands</li>
