--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Source Code Pro', monospace;
-            line-height: 1.6;
+            font-family: 'JetBrains Mono', monospace;
+            line-height: 1.2;
             max-width: 800px;
             margin: 0 auto;
             padding: 2rem;
@@ -21,9 +21,11 @@
             font-weight: 400;
             border-bottom: 2px solid #000;
             padding-bottom: 0.5rem;
+            margin-bottom: 0.5rem;
         }
         p {
             font-size: 1.1rem;
+            margin-bottom: 0.2rem;
         }
     </style>
 </head>
@@ -34,4 +36,3 @@
     <p>IIT Hyderabad</p>
 </body>
 </html>
-
