--- a/index.html
+++ b/index.html
@@ -1,38 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chengappa Thumisi</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'JetBrains Mono', monospace;
-            line-height: 1.2;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 2rem;
-            background-color: #f5f5f5;
-            color: #333;
-        }
-        h1 {
-            font-weight: 400;
-            border-bottom: 2px solid #000;
-            padding-bottom: 0.5rem;
-            margin-bottom: 0.5rem;
-        }
-        p {
-            font-size: 1.1rem;
-            margin-bottom: 0.2rem;
-        }
-    </style>
+<title>GCS</title>
 </head>
 <body>
-    <h1>Chengappa Thumisi</h1>
-    <p>Senior Technical Superintendent</p>
-    <p>Department of Physics</p>
-    <p>IIT Hyderabad</p>
+
+<h1>T. Chengappa</h1>
+<p>IIT Hyderabad</p>
+
 </body>
 </html>
