--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>GCS</title>
-</head>
 <body>
 
-<h1>T. Chengappa</h1>
-<p>IIT Hyderabad</p>
+<h1><Center>T. Chengappa</Center></h1>
+<p><Center>Personal Website</Center></p>
+
+<h2>About Me</h2>
+<p>Senior Technical Superintendent in Department of Physics , IIT Hyderabad</p>
 
 </body>
 </html>
