--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1><Center>T. Chengappa</Center></h1>
-<a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=drive_link">Brief Curriculum Vitae</a>
+<a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=drive_link">Brief Curriculum Vitae</a><br>
 <a href="https://ctwellthify.github.io/#home">Books</a>
 
 </body>
