--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<img src="w3schools.jpg" alt="CT" width="104" height="142">
+<img src="images/CT.jpeg" alt="CT" width="104" height="142">
 <h1><Center>T. Chengappa</Center></h1>
 <a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=drive_link">Brief Curriculum Vitae</a><br><br>
 <a href="https://ctwellthify.github.io/#home">Books</a>
