--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
  <h1><Center>T. Chengappa</Center></h1>
-<img src="images/CT.jpeg" alt="CT" width="250" height="250">
+<img src="images/CT.jpeg" alt="CT" width="250" height="250"><br>
 <a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=drive_link">Brief Curriculum Vitae</a><br><br>
 <a href="https://ctwellthify.github.io/#home">Books</a>
 
