--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <body>
  <h1><Center>T. Chengappa</Center></h1>
 <img src="images/CT.jpeg" alt="CT" width="250" height="250"><br><br>
- <a href="https://samuract.github.io">Personal Website</a>|
-<a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=drive_link">Brief Curriculum Vitae</a>|
-<a href="https://ctwellthify.github.io/#home">Books</a>
+ <a href="https://samuract.github.io">Personal Website</a><br><br>
+<a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=drive_link">Brief Curriculum Vitae</a><br><br>
+<a href="https://ctwellthify.github.io/#home">Books</a><br><br>
 
 </body>
 </html>
