--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <a href="https://samuract.github.io">Personal Website</a><br><br>
 <a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=drive_link">Brief Curriculum Vitae</a><br><br>
 <a href="https://ctwellthify.github.io/#home">Books</a><br><br>
- <a href="https://ctpersonaldomain.github.io/e">Photos</a><br><br>
+ <a href="https://ctpersonaldomain.github.io/">Photos</a><br><br>
  <a href="www.youtube.com/@chengappathumisi147">Videos</a><br><br>
 
 </body>
