--- a/index.html
+++ b/index.html
@@ -1,126 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>T. Chengappa | Personal Page</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    body {
-      margin: 0;
-      background: #f4f6f9;
-      color: #333;
-    }
-
-    header {
-      background: linear-gradient(135deg, #3f51b5, #1a237e);
-      color: white;
-      text-align: center;
-      padding: 40px 20px;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-    }
-
-    .profile {
-      background: #ffffff;
-      text-align: center;
-      padding: 30px 20px;
-    }
-
-    .profile img {
-      width: 220px;
-      height: 220px;
-      object-fit: cover;
-      border-radius: 50%;
-      border: 6px solid #3f51b5;
-    }
-
-    .links {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      padding: 40px 20px;
-    }
-
-    .card {
-      background: white;
-      border-radius: 12px;
-      padding: 25px;
-      text-align: center;
-      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
-    }
-
-    .card a {
-      text-decoration: none;
-      font-size: 1.1rem;
-      font-weight: 600;
-      color: #1a237e;
-    }
-
-    .card.website { background: #e8eaf6; }
-    .card.cv { background: #e0f2f1; }
-    .card.books { background: #fff3e0; }
-    .card.photos { background: #fce4ec; }
-    .card.videos { background: #ede7f6; }
-
-    footer {
-      background: #1a237e;
-      color: #ccc;
-      text-align: center;
-      padding: 15px;
-      font-size: 0.9rem;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>T. Chengappa</title>
 </head>
 <body>
 
-  <header>
-    <h1>T. Chengappa</h1>
-      </header>
+  <h1>T. Chengappa</h1>
 
-  <section class="profile">
-    <img src="images/CT.jpeg" alt="T. Chengappa" />
-  </section>
+  <img src="images/CT.jpeg" alt="T. Chengappa" width="220" height="220">
 
-  <section class="links">
-    <div class="card website">
-      <a href="https://samuract.github.io" target="_blank">Personal Website</a>
-    </div>
+  <p>
+    <a href="https://samuract.github.io" target="_blank">
+      Personal Website
+    </a>
+  </p>
 
-    <div class="card cv">
-      <a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=drive_link" target="_blank">Brief Curriculum Vitae</a>
-    </div>
+  <p>
+    <a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=drive_link" target="_blank">
+      Brief Curriculum Vitae
+    </a>
+  </p>
 
-    <div class="card books">
-      <a href="https://ctwellthify.github.io/#home" target="_blank">Books</a>
-    </div>
+  <p>
+    <a href="https://ctwellthify.github.io/#home" target="_blank">
+      Books
+    </a>
+  </p>
 
-    <div class="card photos">
-      <a href="https://ctpersonaldomain.github.io/" target="_blank">Photos</a>
-    </div>
+  <p>
+    <a href="https://ctpersonaldomain.github.io/" target="_blank">
+      Photos
+    </a>
+  </p>
 
-    <div class="card videos">
-      <a href="https://youtube.com/@chengappathumisi147" target="_blank">Videos</a>
-    </div>
-  </section>
+  <p>
+    <a href="https://youtube.com/@chengappathumisi147" target="_blank">
+      Videos
+    </a>
+  </p>
 
-  <footer>
-    © 2025 Created by GCS 
-  </footer>
+  <p>
+    © 2025 Created by GCS
+  </p>
 
 </body>
 </html>
-
