--- a/index.html
+++ b/index.html
@@ -4,41 +4,47 @@
   <meta charset="UTF-8">
   <title>T. Chengappa</title>
 </head>
-<body>
+
+<body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
 
   <h1>T. Chengappa</h1>
 
-  <img src="images/CT.jpeg" alt="T. Chengappa" width="220" height="220">
+  <table cellpadding="8">
+    <tr>
+      <td rowspan="5">
+        <img src="images/CT.jpeg" alt="T. Chengappa" width="220" height="220">
+      </td>
+      <td>
+        <a href="https://samuract.github.io" target="_blank">Personal Website</a>
+      </td>
+    </tr>
 
-  <p>
-    <a href="https://samuract.github.io" target="_blank">
-      Personal Website
-    </a>
-  </p>
+    <tr>
+      <td>
+        <a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=drive_link" target="_blank">
+          Brief Curriculum Vitae
+        </a>
+      </td>
+    </tr>
 
-  <p>
-    <a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=drive_link" target="_blank">
-      Brief Curriculum Vitae
-    </a>
-  </p>
+    <tr>
+      <td>
+        <a href="https://ctwellthify.github.io/#home" target="_blank">Books</a>
+      </td>
+    </tr>
 
-  <p>
-    <a href="https://ctwellthify.github.io/#home" target="_blank">
-      Books
-    </a>
-  </p>
+    <tr>
+      <td>
+        <a href="https://ctpersonaldomain.github.io/" target="_blank">Photos</a>
+      </td>
+    </tr>
 
-  <p>
-    <a href="https://ctpersonaldomain.github.io/" target="_blank">
-      Photos
-    </a>
-  </p>
-
-  <p>
-    <a href="https://youtube.com/@chengappathumisi147" target="_blank">
-      Videos
-    </a>
-  </p>
+    <tr>
+      <td>
+        <a href="https://youtube.com/@chengappathumisi147" target="_blank">Videos</a>
+      </td>
+    </tr>
+  </table>
 
   <p>
     © 2025 Created by GCS
