--- a/index.html
+++ b/index.html
@@ -9,42 +9,51 @@
 
   <h1>T. Chengappa</h1>
 
-  <table cellpadding="8">
-    <tr>
-      <td rowspan="5">
-        <img src="images/CT.jpeg" alt="T. Chengappa" width="220" height="220">
-      </td>
-      <td>
-        <a href="https://samuract.github.io" target="_blank">Personal Website</a>
-      </td>
-    </tr>
+  <div style="
+    background-color: #eeeeee;
+    padding: 20px;
+    border-radius: 12px;
+    width: fit-content;
+  ">
 
-    <tr>
-      <td>
-        <a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=drive_link" target="_blank">
-          Brief Curriculum Vitae
-        </a>
-      </td>
-    </tr>
+    <table cellpadding="8">
+      <tr>
+        <td rowspan="5">
+          <img src="images/CT.jpeg" alt="T. Chengappa" width="220" height="220">
+        </td>
+        <td>
+          <a href="https://samuract.github.io" target="_blank">Personal Website</a>
+        </td>
+      </tr>
 
-    <tr>
-      <td>
-        <a href="https://ctwellthify.github.io/#home" target="_blank">Books</a>
-      </td>
-    </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=drive_link" target="_blank">
+            Brief Curriculum Vitae
+          </a>
+        </td>
+      </tr>
 
-    <tr>
-      <td>
-        <a href="https://ctpersonaldomain.github.io/" target="_blank">Photos</a>
-      </td>
-    </tr>
+      <tr>
+        <td>
+          <a href="https://ctwellthify.github.io/#home" target="_blank">Books</a>
+        </td>
+      </tr>
 
-    <tr>
-      <td>
-        <a href="https://youtube.com/@chengappathumisi147" target="_blank">Videos</a>
-      </td>
-    </tr>
-  </table>
+      <tr>
+        <td>
+          <a href="https://ctpersonaldomain.github.io/" target="_blank">Photos</a>
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          <a href="https://youtube.com/@chengappathumisi147" target="_blank">Videos</a>
+        </td>
+      </tr>
+    </table>
+
+  </div>
 
   <p>
     © 2025 Created by GCS
