--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <table cellpadding="8">
       <tr>
-        <td rowspan="5">
+        <td rowspan="6">
           <img src="images/CT.jpeg" alt="T. Chengappa" width="220" height="220">
         </td>
         <td>
@@ -50,6 +50,11 @@
         <td>
           <a href="https://youtube.com/@chengappathumisi147" target="_blank">Videos</a>
         </td>
+      </tr>
+
+      <tr>
+        <td>
+          <a href="http://www.google.com">Documents</a></td>
       </tr>
     </table>
 
