--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <table cellpadding="8">
       <tr>
-        <td rowspan="6">
+        <td rowspan="10">
           <img src="images/CT.jpeg" alt="T. Chengappa" width="220" height="220">
         </td>
         <td>
@@ -55,6 +55,26 @@
       <tr>
         <td>
           <a href="http://www.google.com">Documents</a></td>
+      </tr>
+
+      <tr>
+        <td>
+          <a href="http://www.google.com">Research</a></td>
+      </tr>
+
+      <tr>
+        <td>
+          <a href="http://www.google.com">Publications</a></td>
+      </tr>
+
+      <tr>
+        <td>
+          <a href="http://www.google.com">Awards</a></td>
+      </tr>
+
+      <tr>
+        <td>
+          <a href="Conferences">Conferences</a></td>
       </tr>
     </table>
 
